--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
         <meta id="viewport" name="viewport" content="user-scalable=no" />
         <style>
         </style>
-        <script src="../assets/cacheJS.js"></script>
-        <link rel="stylesheet" href="../assets/main.css">
-        <link rel="stylesheet" href="../assets/bootstrap.css">
+        <script src="assets/cacheJS.js"></script>
+        <link rel="stylesheet" href="assets/main.css">
+        <link rel="stylesheet" href="assets/bootstrap.css">
         <link href='https://fonts.googleapis.com/css?family=Josefin+Sans' rel='stylesheet' type='text/css'>
     </head>
     <body class="mainElement container selectionContainer" onload="loadScores()">
