--- a/index.html
+++ b/index.html
@@ -1,15 +1,12 @@
 <html>
     <head>
         <title>Typical Night at Nathan's</title>
-        <meta id="viewport" name="viewport" content="user-scalable=no" />
-        <style>
-        </style>
         <script src="assets/cacheJS.js"></script>
         <link rel="stylesheet" href="assets/main.css">
         <link rel="stylesheet" href="assets/bootstrap.css">
         <link href='https://fonts.googleapis.com/css?family=Josefin+Sans' rel='stylesheet' type='text/css'>
     </head>
-    <body class="mainElement container selectionContainer" onload="loadScores()">
+    <body class="mainElement container" onload="loadScores()">
         <h3>&nbsp;&nbsp;&nbsp;A TYPICAL NIGHT AT NATHAN'S HOUSE - THE GAME</h3>
         <h4>&nbsp;&nbsp;&nbsp;Gamemode Selection</h4>
         <!-- Original -->
