--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <link href='https://fonts.googleapis.com/css?family=Josefin+Sans' rel='stylesheet' type='text/css'>
     </head>
     <body onload="loadScores()">
-        <div class="container">
+        <div>
         <h3>&nbsp;&nbsp;&nbsp;A TYPICAL NIGHT AT NATHAN'S HOUSE - THE GAME</h3>
         <h4>&nbsp;&nbsp;&nbsp;Gamemode Selection</h4>
         <!-- Original -->
