Update gamemode selection page

--- a/games/classic.html
+++ b/games/classic.html
@@ -323,7 +323,7 @@
                 <span class="btn btn-info control-button" onmouseover="moveright()" onmouseout="stopMove()" ontouchend="stopMove()" ontouchcancel="stopMove()" onclick="void(0)">RIGHT</span><br><br><br>
                 <span class="btn btn-info control-button" onmouseover="movedown()" onmouseout="stopMove()" ontouchend="stopMove()" ontouchcancel="stopMove()" onclick="void(0)">DOWN</span><br><br>
                 <div style="font-size:12px;color: #fff">
-                    <strong style="font-size: 18px;">A TYPICAL NIGHT AT NATHAN'S HOUSE - THE GAME</strong><br>
+                    <strong style="font-size: 18px;">A TYPICAL NIGHT AT NATHAN'S HOUSE - ORIGINAL</strong><br>
                     Dodge the SALT SHAKERS while collecting WHIPS to increase Nathan's pleasure!<br>
                     Use the ARROW KEYS, WASD or the controls above to move Nathan<br><br>
                 </div>
