Basic deflation mode

--- a/index.html
+++ b/index.html
@@ -80,13 +80,13 @@
                         <span class="mapGamemode"><strong>Keep Nathan's pleasure above 0 as long as you can</strong></span>
                     </div>
                     <div class="thumbnailLabels">
-                        <span class="label label-danger mapLabel">Coming Soon</span>
+                        <span class="label label-info mapLabel">New</span>
                         <span class="label labelNone">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
                     </div>
                 </div>
-                <div class="thumbnailAuthors"><small>Best Score: <span id="deflate-best">0</span></small></div>
+                <div class="thumbnailAuthors"><small>Best Time: <span id="deflate-best">0</span></small></div>
                 <div style="padding-top:2%;" class="center">
-                    <span class="btn btn-info-disabled thumbnailButton disable-text">Play Game</span>
+                    <span><a href="games/deflate.html" target="_blank" class="btn btn-info thumbnailButton" role="button">Play Game</a></span>
                 </div>
             </div>
         </div>
