--- a/games/deflate.html
+++ b/games/deflate.html
@@ -236,7 +236,7 @@
                     myCollection[i].update();
                 }
                 realScore = (36 + (myCollectionScore * 5)) - (Math.round(myGameArea.frameNo/60) + (saltTouched * 21));
-                myScore.text = "Score: " + realScore;
+                myScore.text = "Pleasure: " + realScore;
                 myScore.update();
                 var enableStat = document.getElementById("show-stats").checked;
                 if (enableStat) {
