Update deflation mode

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                 </div>
             </div>
         </div>
-        <!-- Coming Soon -->
+        <!-- Deflation Mode -->
         <div class="col-xs-4">
             <div id="gamemode_classic" class="thumbnail thumbnailFloat">
                 <div class="thumbnailImage" style="background-image: url();">
@@ -84,7 +84,7 @@
                         <span class="label labelNone">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
                     </div>
                 </div>
-                <div class="thumbnailAuthors"><small>Best Time: <span id="deflate-best">0</span></small></div>
+                <div class="thumbnailAuthors"><small>Best Time: <span id="deflate-best">0</span> seconds</small></div>
                 <div style="padding-top:2%;" class="center">
                     <span><a href="games/deflate.html" target="_blank" class="btn btn-info thumbnailButton" role="button">Play Game</a></span>
                 </div>
