Add deflation image

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
         <!-- Deflation Mode -->
         <div class="col-xs-4">
             <div id="gamemode_classic" class="thumbnail thumbnailFloat">
-                <div class="thumbnailImage" style="background-image: url();">
+                <div class="thumbnailImage" style="background-image: url(assets/img/deflate.png);">
                     <div class="thumbnailBanner">
                         <a class="thumbnailHeader" href="#rooted_fort"><strong>Deflation Mode</strong></a><br>
                         <span class="mapGamemode"><strong>Keep Nathan's pleasure above 0 as long as you can</strong></span>
