Salt information thumbnail

--- a/index.html
+++ b/index.html
@@ -90,6 +90,26 @@
                 </div>
             </div>
         </div>
+        <!-- Salt Meanings -->
+        <div class="col-xs-4">
+            <div class="thumbnail thumbnailFloat topMargin">
+                <div class="label-default label-desc">
+                    <img class="saltImage" src="games/salt.png">
+                    <span class="infoHeader">Salt</span><br>
+                    <span class="description">Common salt.. gradual increase in movement speed and spawn rate</span>
+                </div>
+                <div class="label-danger label-desc">
+                    <img class="saltImage" src="games/salt-red.png">
+                    <span class="infoHeader">Red Salt</span><br>
+                    <span class="description">Super fast salt.. size increases as the player score increases. Only found in Insane Mode.</span>
+                </div>
+                <div class="label-info label-desc">
+                    <img class="saltImage" src="games/salt-blue.png">
+                    <span class="infoHeader">Blue Salt</span><br>
+                    <span class="description">Reduces pleasure by 18 and slows the player. Only found in Deflation Mode</span>
+                </div>
+            </div>
+        </div>
         </div>
         <script>
             function loadScores() {
