--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
             <div id="gamemode_soon" class="thumbnail thumbnailFloat">
                 <div class="thumbnailImage" style="background-image: url();">
                     <div class="thumbnailBanner">
-                        <span class="thumbnailHeader"><strong>Coming Soon</strong></span><br>
+                        <span class="thumbnailHeader"><strong>Super Insane Mode</strong></span><br>
                         <span class="mapGamemode"><strong>???</strong></span>
                     </div>
                     <div class="thumbnailLabels">
@@ -103,7 +103,7 @@
                         <span class="label labelNone">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
                     </div>
                 </div>
-                <div class="thumbnailAuthors"><small>Best Score: <span>0</span></small></div>
+                <div class="thumbnailAuthors"><small>Best Score: <span id="super-insane-best">0</span></small></div>
                 <div style="padding-top:2%;" class="center">
                     <span class="btn btn-info-disabled thumbnailButton" role="button">Play Game</span>
                 </div>
@@ -114,7 +114,7 @@
             <div id="gamemode_soon" class="thumbnail thumbnailFloat">
                 <div class="thumbnailImage" style="background-image: url();">
                     <div class="thumbnailBanner">
-                        <span class="thumbnailHeader"><strong>Coming Soon</strong></span><br>
+                        <span class="thumbnailHeader"><strong>A <i>Very</i> Special Night at Brendon's</strong></span><br>
                         <span class="mapGamemode"><strong>???</strong></span>
                     </div>
                     <div class="thumbnailLabels">
@@ -122,7 +122,7 @@
                         <span class="label labelNone">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
                     </div>
                 </div>
-                <div class="thumbnailAuthors"><small>Best Score: <span>0</span></small></div>
+                <div class="thumbnailAuthors"><small>Best Score: <span id="brendon-best">0</span></small></div>
                 <div style="padding-top:2%;" class="center">
                     <span class="btn btn-info-disabled thumbnailButton" role="button">Play Game</span>
                 </div>
@@ -139,17 +139,17 @@
                 <div class="label-danger label-desc">
                     <img class="saltImage" src="games/salt-red.png">
                     <span class="infoHeader">Red Salt</span><br>
-                    <span class="description">Super fast salt.. size increases as the player score increases. Only found in Insane Mode.</span>
+                    <span class="description">Super fast salt.. size increases as the player score increases. Found in Insane Mode and Super Insane Mode.</span>
                 </div>
                 <div class="label-info label-desc">
                     <img class="saltImage" src="games/salt-blue.png">
                     <span class="infoHeader">Blue Salt</span><br>
-                    <span class="description">Reduces pleasure by 18 and slows the player. Only found in Deflation Mode.</span>
+                    <span class="description">Reduces pleasure by 18 and slows the player. Found in Deflation Mode and Super Insane Mode.</span>
                 </div>
                 <div class="label-default label-desc">
                     <img class="saltImage" src="games/salt-grey.png">
                     <span class="infoHeader">Dark Grey Salt</span><br>
-                    <span class="description">Very slow and follows player movement. This salt cannot currently be found in any gamemode.</span>
+                    <span class="description">Very slow and follows player movement. Only found in Super Insane Mode.</span>
                 </div>
             </div>
         </div>
