--- a/index.html
+++ b/index.html
@@ -61,7 +61,6 @@
                         <span class="mapGamemode"><strong>Classic collection and dodging, insanely fast..</strong></span>
                     </div>
                     <div class="thumbnailLabels">
-                        <span class="label label-info mapLabel">New</span>
                         <span class="label labelNone">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
                     </div>
                 </div>
@@ -80,7 +79,6 @@
                         <span class="mapGamemode"><strong>Keep Nathan's pleasure above 0 as long as you can</strong></span>
                     </div>
                     <div class="thumbnailLabels">
-                        <span class="label label-info mapLabel">New</span>
                         <span class="label labelNone">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
                     </div>
                 </div>
@@ -90,7 +88,26 @@
                 </div>
             </div>
         </div>
-        <!-- Coming Soon -->
+        <!-- A Very Special Night at Brendon's -->
+        <div class="col-xs-4">
+            <div id="gamemode_soon" class="thumbnail thumbnailFloat">
+                <div class="thumbnailImage" style="background-image: url(assets/img/brendon.png);">
+                    <div class="thumbnailBanner">
+                        <span class="thumbnailHeader"><strong>A <i>Very</i> Special Night at Brendon's</strong></span><br>
+                        <span class="mapGamemode"><strong>Survive Rebecca while collecting burgers to keep pleasure above 0</strong></span>
+                    </div>
+                    <div class="thumbnailLabels">
+                        <span class="label label-info mapLabel">New</span>
+                        <span class="label labelNone">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
+                    </div>
+                </div>
+                <div class="thumbnailAuthors"><small>Best Time: <span id="brendon-best">0</span> seconds</small></div>
+                <div style="padding-top:2%;" class="center">
+                    <span><a href="games/brendon.html" target="_blank" class="btn btn-info thumbnailButton" role="button">Play Game</a></span>
+                </div>
+            </div>
+        </div>
+        <!-- Super Insane Mode -->
         <div class="col-xs-4">
             <div id="gamemode_soon" class="thumbnail thumbnailFloat">
                 <div class="thumbnailImage" style="background-image: url();">
@@ -104,25 +121,6 @@
                     </div>
                 </div>
                 <div class="thumbnailAuthors"><small>Best Score: <span id="super-insane-best">0</span></small></div>
-                <div style="padding-top:2%;" class="center">
-                    <span class="btn btn-info-disabled thumbnailButton" role="button">Play Game</span>
-                </div>
-            </div>
-        </div>
-        <!-- Coming Soon -->
-        <div class="col-xs-4">
-            <div id="gamemode_soon" class="thumbnail thumbnailFloat">
-                <div class="thumbnailImage" style="background-image: url();">
-                    <div class="thumbnailBanner">
-                        <span class="thumbnailHeader"><strong>A <i>Very</i> Special Night at Brendon's</strong></span><br>
-                        <span class="mapGamemode"><strong>???</strong></span>
-                    </div>
-                    <div class="thumbnailLabels">
-                        <span class="label label-danger mapLabel">Coming Soon</span>
-                        <span class="label labelNone">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
-                    </div>
-                </div>
-                <div class="thumbnailAuthors"><small>Best Score: <span id="brendon-best">0</span></small></div>
                 <div style="padding-top:2%;" class="center">
                     <span class="btn btn-info-disabled thumbnailButton" role="button">Play Game</span>
                 </div>
@@ -157,6 +155,10 @@
         <div class="col-xs-4">
             <div class="thumbnail thumbnailFloat topMargin black-font">
                 <span class="infoHeader">Recent Changes</span><hr>
+                15-04-16:
+                <ul>
+                    <li>Added <i>A Very Special Night at Brendon's</i></li>
+                </ul>
                 14-04-16:
                 <ul>
                     <li>Remove size changes in blue salt</li>
@@ -170,10 +172,6 @@
                 <ul>
                     <li>Added <i>Insane Mode</i></li>
                 </ul>
-                11-04-16:
-                <ul>
-                    <li>Resize all game ports to fit mobile screens</li>
-                </ul>
             </div>
         </div>
         </div>
@@ -183,6 +181,7 @@
                 document.getElementById("classic-best").innerHTML = cacheJS.get({id: "valueScoreHigh"});
                 document.getElementById("insane-best").innerHTML = cacheJS.get({id: "valueScoreHigh-insane"});
                 document.getElementById("deflate-best").innerHTML = cacheJS.get({id: "valueScoreHigh-deflate"});
+                document.getElementById("brendon-best").innerHTML = cacheJS.get({id: "valueScoreHigh-brendon"});
             }
         </script>
     </body>
